--- a/translations/ar.json
+++ b/translations/ar.json
@@ -122,40 +122,74 @@
   },
   "terms": {
     "title": "الشروط والأحكام",
-    "welcome_text": "مرحبًا بك في تطبيق المواعدة! قبل المتابعة، يرجى قراءة وقبول الشروط والأحكام:",
-    "age_requirement": "١. شرط العمر",
-    "age_18": "يجب أن يكون عمرك ١٨ عامًا على الأقل لاستخدام هذه الخدمة.",
-    "age_accurate": "توافق على تقديم معلومات دقيقة عن عمرك.",
-    "profile_content": "٢. محتوى الملف الشخصي",
-    "profile_accurate": "توافق على تقديم معلومات دقيقة وصادقة في ملفك الشخصي.",
-    "no_impersonation": "لن تنتحل شخصية الآخرين أو تنشئ هويات زائفة.",
-    "no_explicit": "لن تنشر محتوى صريحًا أو غير لائق.",
-    "user_conduct": "٣. سلوك المستخدم",
-    "user_respect": "ستعامل المستخدمين الآخرين باحترام ولباقة.",
-    "no_harassment": "لن تضايق أو تطارد أو تخيف المستخدمين الآخرين.",
-    "no_sharing": "لن تشارك المعلومات الشخصية للمستخدمين الآخرين دون موافقة.",
-    "safety": "٤. إرشادات السلامة",
-    "public_meeting": "نوصي بالالتقاء في أماكن عامة للمواعيد الأولى.",
-    "no_financial": "لا تشارك المعلومات المالية مع المستخدمين الآخرين.",
-    "report": "أبلغ عن السلوك المشبوه أو المسيء فورًا.",
-    "privacy": "٥. الخصوصية",
-    "data_collection": "نقوم بجمع ومعالجة بياناتك كما هو موضح في سياسة الخصوصية الخاصة بنا.",
-    "profile_visible": "قد تكون معلومات ملفك الشخصي مرئية للمستخدمين الآخرين.",
-    "privacy_control": "أنت تتحكم في إعدادات الخصوصية والمعلومات المرئية.",
+    "welcome_text": "مرحبًا بك في تطبيق مخطط الزفاف! قبل المتابعة، يرجى قراءة وقبول الشروط والأحكام الخاصة بخدمات الزواج:",
+    "age_requirement": "١. العمر والأهلية",
+    "age_18": "يجب أن تكون بلغت ١٨ عامًا على الأقل ومؤهلاً قانونيًا للزواج لاستخدام هذه الخدمة.",
+    "age_accurate": "توافق على تقديم معلومات دقيقة عن عمرك وحالتك الاجتماعية.",
+    "profile_content": "٢. معلومات الملف الشخصي",
+    "profile_accurate": "توافق على تقديم معلومات دقيقة وصادقة عن نفسك وتفضيلاتك للزواج.",
+    "no_impersonation": "لن تنتحل شخصية الآخرين أو تنشئ هويات زائفة لأغراض الزواج.",
+    "no_explicit": "ستحافظ على محتوى مناسب يليق بمنصة الزواج.",
+    "user_conduct": "٣. سلوك المستخدم والتواصل",
+    "user_respect": "ستعامل المستخدمين الآخرين وعائلاتهم باحترام ولباقة.",
+    "no_harassment": "لن تضايق أو تطارد أو تخيف المستخدمين الآخرين أو أفراد عائلاتهم.",
+    "no_sharing": "لن تشارك المعلومات الشخصية أو العائلية للمستخدمين الآخرين دون موافقة صريحة.",
+    "safety": "٤. إرشادات اللقاء والسلامة",
+    "public_meeting": "نوصي بشدة بأن تكون اللقاءات الأولى في أماكن عامة مع علم العائلة.",
+    "no_financial": "لا تشارك أبدًا معلومات مالية أو ترسل أموالاً للمستخدمين الآخرين قبل الزواج.",
+    "report": "أبلغ عن أي سلوك مشبوه أو محاولات احتيال أو سلوك غير لائق فورًا.",
+    "privacy": "٥. الخصوصية ومشاركة البيانات",
+    "data_collection": "نقوم بجمع ومعالجة بيانات الزواج الخاصة بك كما هو موضح في سياسة الخصوصية.",
+    "profile_visible": "ستكون معلومات ملفك الشخصي مرئية للأشخاص المناسبين وعائلاتهم.",
+    "privacy_control": "تتحكم في إعدادات الخصوصية ويمكنك إخفاء/إظهار معلومات محددة.",
+    "data_sharing": "قد يتم مشاركة بياناتك مع موردي خدمات الزفاف المعتمدين ومستشاري الزواج لتحسين تجربتك.",
+    "vendor_partnerships": "نتشارك مع قاعات الأفراح والمصورين ومقدمي خدمات الزفاف الآخرين الذين قد يتواصلون معك بعروض ذات صلة.",
     "account_security": "٦. أمن الحساب",
-    "account_responsibility": "أنت مسؤول عن الحفاظ على أمن حسابك.",
-    "report_unauthorized": "أبلغ عن أي وصول غير مصرح به فورًا.",
-    "no_credential_sharing": "لا تشارك بيانات تسجيل الدخول الخاصة بك مع الآخرين.",
-    "termination": "٧. الإنهاء",
-    "termination_right": "نحتفظ بالحق في تعليق أو إنهاء الحسابات التي تنتهك هذه الشروط.",
-    "delete_account": "يمكنك حذف حسابك في أي وقت.",
-    "updates": "٨. تحديثات الشروط",
-    "periodic_updates": "قد نقوم بتحديث هذه الشروط بشكل دوري.",
-    "continued_acceptance": "استمرار الاستخدام بعد التغييرات يشكل قبولًا.",
-    "agreement_text": "بقبول هذه الشروط، فإنك تقر بأنك قد قرأت وفهمت وتوافق على الالتزام بجميع الشروط والأحكام.",
+    "account_responsibility": "أنت مسؤول عن الحفاظ على أمن حسابك وحماية معلوماتك الشخصية.",
+    "report_unauthorized": "أبلغ عن أي وصول غير مصرح به أو نشاط مشبوه فورًا.",
+    "no_credential_sharing": "لا تشارك بيانات تسجيل الدخول مع الآخرين باستثناء أفراد العائلة الموثوقين.",
+    "matrimonial_services": "٧. خدمات الزواج",
+    "matchmaking": "تطبيقنا يوفر خدمات التوفيق ولكن لا يضمن نجاح الزيجات.",
+    "family_involvement": "نشجع مشاركة العائلة في عملية الزواج وفقًا للتقاليد الثقافية.",
+    "background_verification": "بينما نسعى للتحقق من الملفات الشخصية، فأنت مسؤول عن إجراء التحقيقات الخاصة بك.",
+    "wedding_planning": "٨. خدمات تخطيط الزفاف",
+    "vendor_network": "قد نربطك بشبكتنا من موردي الزفاف ومقدمي الخدمات.",
+    "third_party_services": "خدمات موردي الزفاف مقدمة من أطراف ثالثة وتخضع لشروطهم الخاصة.",
+    "no_liability": "نحن غير مسؤولين عن الخدمات المقدمة من موردي الزفاف الخارجيين.",
+    "termination": "٩. إنهاء الحساب",
+    "termination_right": "نحتفظ بالحق في تعليق أو إنهاء الحسابات التي تنتهك هذه الشروط أو تشارك في سلوك احتيالي.",
+    "delete_account": "يمكنك حذف حسابك في أي وقت، ولكن قد يتم الاحتفاظ ببعض البيانات لأغراض قانونية.",
+    "successful_match": "يرجى إعلامنا بالتوفيقات الناجحة لمساعدتنا في تحسين خدماتنا.",
+    "updates": "١٠. تحديثات الشروط",
+    "periodic_updates": "قد نقوم بتحديث هذه الشروط دوريًا لتعكس التغييرات في قوانين الزواج أو الخدمات.",
+    "continued_acceptance": "استمرار الاستخدام بعد التغييرات يشكل قبولًا للشروط المحدثة.",
+    "agreement_text": "بقبول هذه الشروط، فإنك تقر بأنك قد قرأت وفهمت وتوافق على الالتزام بجميع الشروط والأحكام الخاصة بخدمات الزواج وتخطيط الزفاف. تفهم أن بياناتك قد تتم مشاركتها مع موردي الزفاف وأن هذه منصة لأغراض الزواج الجدية.",
     "processing": "جاري المعالجة...",
-    "accept": "قبول",
-    "decline": "رفض"
+    "accept": "قبول والمتابعة",
+    "decline": "رفض",
+    "welcome_message": "مرحباً بك في رحلة الحب! 💕",
+    "welcome_subtitle": "يرجى مراجعة الشروط والأحكام لخدمات الزواج وتخطيط الزفاف.",
+    "section_1_title": "🎯 العمر والأهلية",
+    "section_1_item_1": "يجب أن تكون ١٨+ عاماً ومؤهلاً قانونياً للزواج",
+    "section_1_item_2": "تقديم معلومات دقيقة عن العمر والحالة الاجتماعية",
+    "section_2_title": "👤 معلومات الملف الشخصي",
+    "section_2_item_1": "تقديم معلومات صادقة عن نفسك وتفضيلاتك",
+    "section_2_item_2": "لا يُسمح بانتحال الشخصية أو الهويات المزيفة",
+    "section_2_item_3": "الحفاظ على محتوى مناسب لأغراض الزواج",
+    "section_3_title": "🔒 الخصوصية ومشاركة البيانات",
+    "section_3_item_1": "نجمع بيانات الزواج وفقاً لسياسة الخصوصية",
+    "section_3_item_2": "الملف الشخصي مرئي للشركاء المحتملين والعائلات",
+    "section_3_item_3": "البيانات تُشارك مع موردي الزفاف المعتمدين لتحسين التجربة",
+    "section_3_item_4": "شراكة مع قاعات الأفراح والمصورين ومقدمي الخدمات",
+    "section_4_title": "💍 خدمات تخطيط الزفاف",
+    "section_4_item_1": "الاتصال مع شبكة موردي الزفاف لدينا",
+    "section_4_item_2": "خدمات الطرف الثالث تخضع لشروطهم الخاصة",
+    "section_4_item_3": "غير مسؤولين عن خدمات موردي الطرف الثالث",
+    "section_5_title": "🛡️ إرشادات السلامة",
+    "section_5_item_1": "اللقاء الأولي في أماكن عامة مع علم العائلة",
+    "section_5_item_2": "عدم مشاركة المعلومات المالية قبل الزواج أبداً",
+    "section_5_item_3": "الإبلاغ عن السلوك المشبوه فوراً",
+    "agreement_message": "بالقبول، توافق على استخدام منصتنا بمسؤولية لأغراض زواج جدية وتفهم أن بياناتك قد تُشارك مع مقدمي خدمات الزفاف."
   },
   "filters": {
     "alerts": {
@@ -361,6 +395,14 @@
     "report": "إبلاغ"
   },
   "register": {
+    "registration_error": "خطأ في التسجيل",
+    "registration_failed": "فشل التسجيل. يرجى المحاولة مرة أخرى.",
+    "email_already_registered": "هذا البريد الإلكتروني مسجل بالفعل. هل تريد الذهاب إلى صفحة تسجيل الدخول؟",
+    "cancel": "إلغاء",
+    "go_to_login": "اذهب لتسجيل الدخول",
+    "ok": "موافق",
+    "unknown_error": "حدث خطأ غير معروف. يرجى المحاولة مرة أخرى.",
+    "registration_error": "Registration successful",
     "gender": "الجنس",
     "male": "ذكر",
     "female": "أنثى",
@@ -1102,12 +1144,62 @@
     },
     "like_confirmation": {
       "title": "تأكيد الإعجاب",
-      "message": "هل تريد الإعجاب بـ {name}؟",
-      "confirm": "نعم، أعجبني",
+      "message": "هل أنت متأكد أنك تريد الإعجاب بـ {{name}}؟ سيتم إشعارهم بإعجابك.",
+      "confirm": "تأكيد",
       "cancel": "إلغاء"
     },
     "like_success": {
       "message": "لقد أعجبت بـ {name}! سنخبرك إذا كان هناك تطابق."
+    },
+    "like_success_banner": {
+      "message": "لقد أعجبت بـ {{name}}! سنخبرهم بإعجابك."
+    },
+    "dislike_confirmation": {
+      "title": "تأكيد عدم الإعجاب",
+      "message": "هل أنت متأكد أنك تريد عدم الإعجاب بـ {{name}}؟ لن يتم إخطارهم بقرارك.",
+      "cancel": "إلغاء",
+      "confirm": "تأكيد"
     }
+  },
+  "incomplete_matches": {
+    "title": "أكمل ملفك الشخصي للعثور على التطابقات",
+    "subtitle": "الشريك المثالي ينتظرك! أكمل ملفك الشخصي لفتح التطابقات المخصصة.",
+    "steps_title": "ما تحتاج إلى إكماله:",
+    "steps": {
+      "basic_info": "المعلومات الأساسية",
+      "basic_info_desc": "أضف تفاصيلك الشخصية والموقع ومعلومات الخلفية",
+      "preferences": "التفضيلات",
+      "preferences_desc": "أخبرنا عما تبحث عنه في الشريك",
+      "photos": "صور الملف الشخصي",
+      "photos_desc": "ارفع صوراً لإظهار شخصيتك واهتماماتك"
+    },
+    "benefits_title": "لماذا إكمال ملفك الشخصي؟",
+    "benefits": {
+      "better_matches": "احصل على تطابقات أكثر دقة وتوافقاً",
+      "more_visibility": "زد من ظهور ملفك الشخصي للتطابقات المحتملة",
+      "trust_safety": "بناء الثقة بمعلومات كاملة ومتحققة"
+    },
+    "complete_profile": "أكمل ملفي الشخصي"
+  },
+  "incomplete_search": {
+    "title": "أكمل ملفك الشخصي للبحث",
+    "subtitle": "افتح ميزات البحث المتقدمة من خلال إكمال ملفك الشخصي أولاً.",
+    "message": "لنوفر لك أفضل نتائج البحث، يرجى إكمال معلومات ملفك الشخصي.",
+    "features_title": "ما ستفتحه:",
+    "features": {
+      "advanced_search": "البحث المتقدم",
+      "advanced_search_desc": "فلترة حسب التفضيلات التفصيلية ومعايير التوافق",
+      "smart_filters": "المرشحات الذكية",
+      "smart_filters_desc": "توصيات مدعومة بالذكاء الاصطناعي بناءً على بيانات ملفك الشخصي",
+      "precise_matching": "المطابقة الدقيقة",
+      "precise_matching_desc": "ابحث عن شركاء يتطابقون حقاً مع قيمك وأهدافك"
+    },
+    "requirements_title": "أكمل هذه الأقسام:",
+    "requirements": {
+      "basic_info": "المعلومات الشخصية والخلفية",
+      "preferences": "تفضيلات الشريك والخطوط الحمراء",
+      "photos": "على الأقل 3 صور للملف الشخصي"
+    },
+    "complete_profile": "أكمل ملفي الشخصي"
   }
 }
